# tennis-tracking

./: .gitignore  README.md  main.py  pyproject.toml  yolo_inference.py
trackers/: player_tracker.py
training/: tennis_ball_detector_training.ipynb
utils/: video_utils.py
