[project]
name = "tennis-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "loguru>=0.7.3",
    "roboflow>=1.2.3",
    "ultralytics>=8.3.173",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
